tests/files/lexer_tests/should_fail/064.cmdr
// Illegal character in variable name (ascii 31)
myvar = 31;